[package]
name = "iced_picker"
version = "1.1.0"
edition = "2024"

[lib]
name = "iced_picker"
path = "src/lib.rs"

[dependencies]
iced = { version = "0.15.0-dev", features = ["advanced", "canvas", "debug", "smol"] }
iced_core = "0.15.0-dev"
log = "0.4"
num-traits = "0.2"
smol = "2.0.2"
unicode-segmentation = "1"

[patch.crates-io]
iced = { git = "https://github.com/alex-ds13/iced.git", branch = "bless-component-with-fixes" }
iced_core = { git = "https://github.com/alex-ds13/iced.git", branch = "bless-component-with-fixes" }
